fixes alignment in user show

--- a/wdi-final-app/app/assets/stylesheets/users.scss
+++ b/wdi-final-app/app/assets/stylesheets/users.scss
@@ -125,7 +125,7 @@ p {
 #user-totals {
 	margin-right: 0;
 	margin-left: 1em;
-	width: 32%;
+	width: 33.4%;
 }
 
 #user-totals p {
